Fixed mountain overlapping in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,10 @@ p {
     bottom: 300px;
 }
 
+.mountain {
+  width: 100%
+}
+
 
 @media only screen and (max-width: 1200px){
     /*Tablets [601px -> 1200px]*/
